@startuml server
class Player {
}

class ServerPlayer {
}

class Game {
    -players : List[ServerPlayer]
    -deck : Deck
}

class Deck {
}

class GameRequestHandler {
    -game : Game
}

class ThreadedTCPServer {
    -game : Game
    -game_actions : Queue
}

Player <|-- ServerPlayer
Game *-- ServerPlayer : contains
Game *-- Deck : contains
GameRequestHandler -- Game : uses
ThreadedTCPServer *-- Game : contains
ThreadedTCPServer *-- Queue : contains
socketserver.BaseRequestHandler <|-- GameRequestHandler
socketserver.ThreadingMixIn <|-- ThreadedTCPServer
socketserver.TCPServer <|-- ThreadedTCPServer

@enduml